# SplatMaker

./: .gitignore  package-lock.json  package.json  vite.config.js
backend/: config.py  main.py  models.py  requirements.txt  ws_manager.py
backend/pipeline/: export.py  extract.py  mask.py  orchestrator.py  sfm.py  split.py  train.py
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.js  router.js  splat-viewer.js  ws.js
src/screens/: export.js  home.js  import.js  pipeline.js  viewer.js
src/styles/: components.css  index.css  screens.css
