[package]
name = "splatmaker"
version = "0.1.0"
description = "Desktop app that converts Insta360 equirectangular video into Gaussian Splats"
authors = ["SplatMaker"]
edition = "2021"

[lib]
name = "splatmaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
